version/0.20/_sources/api/solver/_autosummary/settings/momentum_3.rst.txt
:orphan:

.. _momentum_3:

momentum
========

.. autoclass:: ansys.fluent.core.solver.settings_241.momentum_3.momentum
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ======================================

Attribute                                                                                             Summary

====================================================================   ======================================
:ref:`reference_frame <reference_frame_2>`                                                   Reference Frame.

:ref:`mass_flow_specification <mass_flow_specification>`                      Mass Flow Specification Method.

:ref:`mass_flow_rate <mass_flow_rate_1>`                                                      Mass Flow Rate.

:ref:`exit_corrected_mass_flow_rate <exit_corrected_mass_flow_rate>`           Exit Corrected Mass Flow Rate.

:ref:`mass_flux <mass_flux>`                                                                       Mass Flux.

:ref:`average_mass_flux <average_mass_flux>`                                               Average Mass Flux.

:ref:`supersonic_gauge_pressure <supersonic_gauge_pressure>`               Supersonic/Initial Gauge Pressure.

:ref:`direction_specification <direction_specification>`                      Direction Specification Method.

:ref:`coordinate_system <coordinate_system>`                                               Coordinate System.

:ref:`flow_direction <flow_direction>`                                                'flow_direction' child.

:ref:`direction_vector <direction_vector>`                                          'direction_vector' child.

:ref:`axis_direction <axis_direction_2>`                                              'axis_direction' child.

:ref:`axis_origin <axis_origin_2>`                                                       'axis_origin' child.

:ref:`swirl_velocity_specification <swirl_velocity_specification>`             Swirl-Velocity Specification?.

:ref:`swirl_factor <swirl_factor>`                                                              Swirl factor.

:ref:`fan_origin <fan_origin>`                                                            'fan_origin' child.

:ref:`ecmf_reference_temperature <ecmf_reference_temperature>`                    ECMF Reference Temperature.

:ref:`ecmf_reference_gauge_pressure <ecmf_reference_gauge_pressure>`           ECMF Reference Gauge Pressure.

:ref:`ac_options <ac_options>`                                                            'ac_options' child.

:ref:`impedance_0 <impedance_0>`                                                             Zero order term.

:ref:`impedance_1 <impedance_1>`                                                            Real Pole Series.

:ref:`impedance_2 <impedance_2>`                                                         Complex Pole Series.

:ref:`ac_wave <ac_wave>`                                                                       Incoming Wave.

====================================================================   ======================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_9>`                                   'child_object_type' of phase.

====================================================   ===========================================

