version/0.24/_sources/api/solver/_autosummary/settings/momentum_3.rst.txt
:orphan:

.. _momentum_3:

momentum
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.momentum_3.momentum
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ======================================

Attribute                                                                                             Summary

====================================================================   ======================================
:ref:`reference_frame <reference_frame_5>`                                                   Reference Frame.

:ref:`system_coupling <system_coupling_1>`                                                  System Coupling?.

:ref:`mass_flow_specification <mass_flow_specification>`                      Mass Flow Specification Method.

:ref:`mass_flow_rate <mass_flow_rate_1>`                                                      Mass Flow Rate.

:ref:`exit_corrected_mass_flow_rate <exit_corrected_mass_flow_rate>`           Exit Corrected Mass Flow Rate.

:ref:`mass_flux <mass_flux>`                                                                       Mass Flux.

:ref:`average_mass_flux <average_mass_flux>`                                               Average Mass Flux.

:ref:`supersonic_gauge_pressure <supersonic_gauge_pressure>`                          Specify Gauge Pressure.

:ref:`direction_specification <direction_specification>`                      Direction Specification Method.

:ref:`coordinate_system <coordinate_system_1>`                                             Coordinate System.

:ref:`flow_direction <flow_direction>`                                         Set flow direction components.

:ref:`direction_vector <direction_vector>`                                   Set direction vector components.

:ref:`axis_direction <axis_direction_2>`                                       Set axis direction components.

:ref:`axis_origin <axis_origin_2>`                                                Set axis origin components.

:ref:`swirl_velocity_specification <swirl_velocity_specification_1>`           Swirl-Velocity Specification?.

:ref:`swirl_factor <swirl_factor>`                                                              Swirl factor.

:ref:`fan_origin <fan_origin>`                                                     Set fan origin components.

:ref:`ecmf_reference_temperature <ecmf_reference_temperature>`                    ECMF Reference Temperature.

:ref:`ecmf_reference_gauge_pressure <ecmf_reference_gauge_pressure>`           ECMF Reference Gauge Pressure.

:ref:`acoustic_wave_model <acoustic_wave_model>`                                  Select acoustic wave model.

:ref:`impedance_zero_order_term <impedance_zero_order_term>`               Specify impedance zero order term.

:ref:`real_pole_series <real_pole_series>`                                          List of Real Pole Series.

:ref:`complex_pole_series <complex_pole_series>`                                 List of Complex Pole Series.

:ref:`incoming_wave <incoming_wave>`                                                   Specify incoming wave.

====================================================================   ======================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_11>`                                  'child_object_type' of phase.

:ref:`phase_child <phase_child_39>`                                  'child_object_type' of phase.

====================================================   ===========================================

